# BrassUtils

./: CMakeLists.txt
.devcontainer/: Dockerfile  InstallDeps.sh  devcontainer.json
cmake/: Boost.cmake  GLM.cmake
cpp/src/assert/: Cassert.hpp
cpp/src/geometry/: AABB.hpp
cpp/src/misc/: Singleton.hpp
cpp/src/serialization/: ByteReader.cpp  ByteReader.hpp  ByteStream.hpp  ByteWriter.cpp  ByteWriter.hpp
